--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ganeti-instance-debootstrap (0.16-2.1+sci1) unstable; urgency=medium
+
+  * Porting SCI project patches to new upstream version
+
+ -- Vladimir Ipatov <vs@ipatov.net>  Tue, 26 Sep 2017 21:24:00 +0300
+
 ganeti-instance-debootstrap (0.16-2.1) unstable; urgency=medium
 
   * Non-maintainer upload.
