--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+ganeti-instance-debootstrap (0.16-5+sci2) unstable; urgency=medium
+
+  * delete rename logic from debian,ubuntu,centos scripts
+
+ -- Vladimir Ipatov <vs@ipatov.net>  Tue, 19 May 2019 21:24:00 +0300
+
+ganeti-instance-debootstrap (0.16-5+sci1) unstable; urgency=medium
+
+  * create vm without partition
+
+ -- Vladimir Ipatov <vs@ipatov.net>  Tue, 19 May 2019 21:24:00 +0300
+
+ganeti-instance-debootstrap (0.16-2.1+sci6) unstable; urgency=medium
+
+  * add debian buster support
+
+ -- Vladimir Ipatov <vs@ipatov.net>  Tue, 13 Mar 2018 21:24:00 +0300
+
 ganeti-instance-debootstrap (0.16-2.1+sci5) unstable; urgency=medium
 
   * set achive mirror for wheezy
